# hap-oauth-mcp

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
docs/: reference.md
mingdao_mcp_login/: __init__.py  encrypt.py  generate_mcp_config.py  http_retry.py  md_login.py  oauth_api.py
scripts/: install.sh
